@@ -1,3 +1,8 @@
+2016-12-05  Hani Benhabiles  <hani.benhabiles@greenbone.net>
+
+	* src/comm.c (comm_init): Don't write gibberish content to log file when
+	reading the OTP version.
+
 2016-12-04  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* CMakeLists.txt, INSTALL: Require libgvm_base.
